--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ allprojects {
             force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
             force("org.codehaus.jettison:jettison:1.1")
             force("net.java.dev.jna:jna:5.8.0")
+//            compileOnly 'org.projectlombok:lombok:1.18.20'
+//            annotationProcessor 'org.projectlombok:lombok:1.18.20'
+//            testCompileOnly 'org.projectlombok:lombok:1.18.20'
+//            testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
         }
     }
 }
