--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ allprojects {
                 mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.2")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
+//            dependency("org.openjdk.jmh:jmh-core:${Versions.jmh}")
+//            dependency("org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}")
+//            dependency("org.openjdk.jol:jol-core:${Versions.jol}")
+//            dependency("org.ow2.asm:asm-commons:${Versions.asm}")
         }
     }
 
@@ -46,11 +50,6 @@ allprojects {
             force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
             force("org.codehaus.jettison:jettison:1.1")
             force("net.java.dev.jna:jna:5.8.0")
-//            compileOnly 'org.projectlombok:lombok:1.18.20'
-//            annotationProcessor 'org.projectlombok:lombok:1.18.20'
-//            testCompileOnly 'org.projectlombok:lombok:1.18.20'
-//            testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
-
         }
     }
 }
