--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'L06-annotation'
 include 'L06-reflection'
 include 'L15-structuralPatterns:demo'
 include 'L15-structuralPatterns:homework'
+include 'L16-io:demo'
+include 'L16-io:homework'
 
