--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
 //            dependency("org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}")
 //            dependency("org.openjdk.jol:jol-core:${Versions.jol}")
 //            dependency("org.ow2.asm:asm-commons:${Versions.asm}")
+              dependency("com.google.protobuf:protobuf-java-util:1.1")
         }
     }
 
