--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,5 @@ include 'L15-structuralPatterns:demo'
 include 'L15-structuralPatterns:homework'
 include 'L16-io:demo'
 include 'L16-io:homework'
+include 'homework2'
+
