commmit L15-success tests

--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,15 @@ allprojects {
                 mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.2")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
-//            dependency("org.openjdk.jmh:jmh-core:${Versions.jmh}")
-//            dependency("org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}")
-//            dependency("org.openjdk.jol:jol-core:${Versions.jol}")
-//            dependency("org.ow2.asm:asm-commons:${Versions.asm}")
-              dependency("com.google.protobuf:protobuf-java-util:1.1")
+            dependency("org.openjdk.jmh:jmh-core:${Versions.jmh}")
+            dependency("org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}")
+            dependency("org.openjdk.jol:jol-core:${Versions.jol}")
+            dependency("org.ow2.asm:asm-commons:${Versions.asm}")
+            dependency("org.glassfish:javax.json:${Versions.glassfishJson}")
+            dependency("com.google.protobuf:protobuf-java-util:${Versions.protobuf}")
+            dependency("org.testcontainers:junit-jupiter:${Versions.testcontainers}")
+            dependency("org.testcontainers:postgresql:${Versions.testcontainers}")
+            dependency("org.mapstruct:mapstruct-processor:1.3.1.Final")
         }
     }
 
