--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ include 'L15-structuralPatterns:homework'
 include 'L16-io:demo'
 include 'L16-io:homework'
 include 'homework2'
+include 'L18-jdbc:demo'
+include 'L18-jdbc:homework'
 
