commmit L15-success tests

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,4 @@ include 'homework2'
 include 'L18-jdbc:demo'
 include 'L18-jdbc:homework'
 include 'L21-jpql:demo'
-include 'L21-jql:homework'
+include 'L21-jpql:homework'
