--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,7 @@ include 'L16-io:homework'
 include 'homework2'
 include 'L18-jdbc:demo'
 include 'L18-jdbc:homework'
+include 'L21-jpql:class-demo'
+include 'L21-jpql:homework-template'
+include 'L22-cache'
 
