--- a/settings.gradle
+++ b/settings.gradle
@@ -3,8 +3,6 @@ include 'L01-gradle'
 include 'L04-generics'
 include 'L06-annotation'
 include 'L06-reflection'
-include 'L15-structuralPatterns:demo'
-include 'L15-structuralPatterns:homework'
 include 'L16-io:demo'
 include 'L16-io:homework'
 include 'homework2'
@@ -12,3 +10,4 @@ include 'L18-jdbc:demo'
 include 'L18-jdbc:homework'
 include 'L21-jpql:demo'
 include 'L21-jpql:homework'
+include 'L24-webServer'
