--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'L18-jdbc:homework'
 include 'L21-jpql:demo'
 include 'L21-jpql:homework'
 include 'L24-webServer'
-
+include 'L25-di:class-demo'
+include 'L25-di:homework-template'
