commmit L15-success tests

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'L21-jpql:demo'
 include 'L21-jpql:homework'
 include 'L24-webServer'
 include 'L25-di:class-demo'
-include 'L25-di:homework-template'
+include 'L25-di:homework'
+include 'L28-springDataJdbc'
