--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
     dependencyManagement {
         dependencies {
             imports {
-                mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.2")
+                mavenBom("org.springframework.boot:spring-boot-dependencies:2.5.5")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.openjdk.jmh:jmh-core:${Versions.jmh}")
@@ -54,10 +54,12 @@ allprojects {
 
             dependency("redis.clients:jedis:${Versions.jedis}")
 
-//            dependency("org.junit.jupiter:junit-jupiter-engine")
-//            dependency("org.junit.jupiter:junit-jupiter-params")
-//            dependency("org.assertj:assertj-core")
-//            dependency("org.mockito:mockito-junit-jupiter")
+            dependency("org.webjars:sockjs-client:${Versions.sockjs}")
+            dependency("org.webjars:stomp-websocket:${Versions.stomp}")
+            dependency("org.webjars:bootstrap:${Versions.bootstrap}")
+            dependency("io.springfox:springfox-boot-starter:${Versions.swagger}")
+
+            dependency("com.google.code.findbugs:jsr305:${Versions.jsr305}")
         }
     }
 
