commmit L15-success tests

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include 'L24-webServer'
 include 'L25-di:class-demo'
 include 'L25-di:homework'
 include 'L28-springDataJdbc'
+include 'L31-executors'
